Acomodando y redacción | DB

--- a/4º Año/Bases de Datos/Unidad 10/2. Esquemas de Control de Concurrencia.md
+++ b/4º Año/Bases de Datos/Unidad 10/2. Esquemas de Control de Concurrencia.md
@@ -60,7 +60,7 @@ En ocasiones particulares, como aquellas donde se realizan muchas más transacci
 La dificultad de reducir la sobrecarga está en que no se conocen de antemano las transacciones que estarán involucradas en un conflicto. Para obtener dicho conocimiento se necesita un esquema para supervisar el sistema.
 Por lo general cada transacción $T_i$ se ejecuta en dos o tres fases diferentes durante su tiempo de vida dependiendo de si es una transacción de solo lectura o una que involucra escrituras. Las fases son las siguientes:
 1. **Fase de lectura**: Durante esta fase tiene lugar la ejecución de la transacción $T_i$ se leen los valores de varios elementos de datos y se almacenan en variables locales.
-2. **Fase de validación**: La transacción $T_i$ realiza una prueba de validación para determinar si puede copiar en la base de datos las variables locales temporales que tienen los resultados de las operaciones de escritura sin causar una violación de la secuencialidad.
+2. **Fase de validación**: La transacción $T_i$ realiza una prueba de validación para determinar si puede copiar en la base de datos las variables locales temporales que tienen los resultados de las operaciones de escritura no causan una violación de la secuencialidad.
 3. **Fase de escritura**: Si la transacción $T_i$ tiene éxito en la validación entonces las actualizaciones reales se aplican a la base de datos. En otro caso, $T_i$ retrocede.
 
 Para realizar la prueba de validación se necesita conocer el momento en que tienen lugar las distintas fases de las transacciones $T_i$. Por lo tanto, se asocian tres marcas temporales distintas a la transacción $T_i$ :
