--- a/4º Año/Bases de Datos/Unidad 10/4. Gestion y Recuperacion de Interbloqueos.md
+++ b/4º Año/Bases de Datos/Unidad 10/4. Gestion y Recuperacion de Interbloqueos.md
@@ -6,7 +6,7 @@ Para tratar de manejar los interbloqueos existen a grandes razgos tres métodos 
 
 ## Mecanismos de Evasión
 Estos métodos se vasan en utilizar algún protocolo de control de concurrencia, que no admita que el sistema caiga en un interbloqueo, tal como los protocolos de validación, locks grupal o los protocolos basados en grafos.
-El problema del lock grupal es la inanición, ya que una transacción que necesita muchos datos nunca logrará bloquear todos los datos necesarios, quedando en estado de espera indefinidamente. Una alternativa a este método es establecer un orden en que se bloquean los datos como lo hacen los protocolos de grafos.
+El problema del lock grupal es la inanición, ya que una transacción que necesita muchos datos nunca logrará bloquear todos los datos necesarios, quedando en estado de espera indefinidamente. Una alternativa a este método es establecer un orden en que se bloquean los datos como lo hacen los protocolos de árbol.
 ## Mecanismos Prevención
 Los métodos de prevención aseguran que el sistema nunca llegue a un estado de interbloqueo. Un mecanismo para prevenir interbloqueos es la utilización de expropiación y retroceso de transacciones. Para controlar estas situaciones, se asigna una marca temporal única a cada transacción. El gestor de la base de datos utiliza estas marcas para decidir si una transacción debe esperar o retroceder, estas decisiones varían de acuerdo al esquema empleado por la base de datos. Para la prevención de interbloqueos se han propuesto dos esquemas diferentes basados en marcas temporales:
 1. **Esperar-morir**: Esta técnica no utiliza expropiaciones. Cuando una transacción $T_i$ solicita un dato que $T_k$ tiene bloqueado en ese momento, se permitirá que $T_i$ espere solo si $ts(T_i) < ts(T_k)$; de lo contrario $T_i$ retrocede. Es decir, las transacciones más jóvenes esperan a que se liberen los datos mientras que las más antiguas retroceden.
