--- a/4º Año/Bases de Datos/Unidad 12/2. Proceso de Recuperación, Concurrencia e Interbloqueo.md
+++ b/4º Año/Bases de Datos/Unidad 12/2. Proceso de Recuperación, Concurrencia e Interbloqueo.md
@@ -1,7 +1,7 @@
 Al especificar un valor de punto de compromiso para cada nodo, se asegura de que el servidor más crítico no se bloquee si se produce un fallo durante la fase de preparación o confirmación. Para establecer la ***commit point strength*** de una base de datos basta con agregar una línea adicional en el archivo de configuración durante la inicialización de esta misma. Este valor solo se utilizará para determinar el punto de commit en una transacción distribuida.
 >[!note] Punto de Compromiso y Fuerza del Punto de Compromiso
->En una transacción distribuida, el punto de compromiso es el momento en el que se decide que una transacción puede ser finalizada y sus cambios aplicados de manera permanente. Este punto es crucial porque asegura que todos los nodos involucrados en la transacción estén de acuerdo en que la transacción puede ser completada sin errores.
->Por otro lado, cuando hablamos de fuerza del punto de compromiso (*commit point strenght*) se refiere a la importancia del nodo que se elige para almacenar el punto de compromiso. Un nodo con una alta *commit point strength* es uno que es menos probable que falle y que está siempre disponible. Esto es importante porque si el nodo que almacena el punto de compromiso falla podría producir un bloqueo en el sistema.
+>En una transacción distribuida, el *punto de compromiso* es el momento en el que se decide que una transacción puede ser finalizada y sus cambios aplicados de manera permanente. Este punto es crucial porque asegura que todos los nodos involucrados en la transacción estén de acuerdo en que la transacción puede ser completada sin errores.
+>Por otro lado, cuando hablamos de *fuerza del punto de compromiso* (*commit point strenght*) se refiere a la importancia del nodo que se elige para almacenar el punto de compromiso. Un nodo con una alta *commit point strength* es uno que es menos probable que falle y que está siempre disponible. Esto es importante porque si el nodo que almacena el punto de compromiso falla podría producir un bloqueo en el sistema.
 
 Dado que el punto de compromiso almacena información sobre el estado de la transacción, este debe ser almacenado en un nodo que no se caiga a menudo y que siempre esté disponible en caso de que otros nodos necesiten información sobre el estado de la transacción. Por lo que se recomienda que la *commit point strength* se establezca en función de la cantidad de datos críticos que se comparten en la base de datos. Esto significa que si una base de datos maneja datos muy importantes, el nodo que almacena el punto de compromiso debe ser especialmente robusto y confiable.
 ## Resolución de Transacciones Dudosas en Oracle
@@ -37,7 +37,7 @@ Los diferentes protocolos de bloqueo mencionados en la unidad anterior se pueden
 - **Gestión distribuida de bloques**: Distribuye la función de gestor de bloqueos entre varios sitios, donde cada sitio maneja localmente las solicitudes de bloqueo y desbloqueo para los datos almacenados en ese sitio. Cuando una transacción desea bloquear un dato no replicado, envía la solicitud al gestor local del sitio correspondiente. Si el dato ya está bloqueado en un modo incompatible, la solicitud se retrasa hasta que pueda concederse. Una vez aprobada, se notifica al sitio de origen. Este esquema disminuye el cuello de botella y mantiene una implementación sencilla. Sin embargo, el manejo de interbloqueos es más complejo porque las solicitudes se gestionan en múltiples sitios, lo que puede generar interbloqueos globales que requieren algoritmos modificados para su detección y resolución.
 - **Copia principal**: Se designa una de las réplicas del dato $Q$ como copia principal de dicho dato, esta copia principal reside en un sitio único, denominado ***sitio principal*** de $Q$. Cuando una transacción necesita bloquear $Q$, solicita el bloqueo en su sitio principal, y la solicitud se gestiona de la misma manera que para datos no replicados. Esto simplifica la implementación del control de concurrencia. Sin embargo, si el sitio principal falla, el dato $Q$ se vuelve inaccesible, incluso si otras réplicas están disponibles en otros sitios.
 ### Manejo de Concurrencia en Esquemas Con Réplica
-Como ya mencionamos cuando hablamos de [[5. Gestion y Recuperacion de Fallos|recuperación ante fallos]], uno de los enfoques más sencillos que se puede utilizar para mejorar la disponibilidad es utilizar un ***servidor central primario*** y un base de datos espejo la cual, en caso de que el servidor central caiga, se tomará a la copia secundaria como primaria y se redireccionará todas las peticiones a esta misma. Una alternativa más conveniente sería tener un sitio primario para cada fragmento, aumentando así la disponibilidad al máximo.
+Como ya mencionamos cuando hablamos de [[2. Recuperacion de Fallos en las Transacciones|recuperación ante fallos]], uno de los enfoques más sencillos que se puede utilizar para mejorar la disponibilidad es utilizar un ***servidor central primario*** y un base de datos espejo la cual, en caso de que el servidor central caiga, se tomará a la copia secundaria como primaria y se redireccionará todas las peticiones a esta misma. Una alternativa más conveniente sería tener un sitio primario para cada fragmento, aumentando así la disponibilidad al máximo.
 Dado que existe un lugar central donde se almacenan los datos, todo el control de concurrencia y la asignación de los bloqueos puede realizarse en el mismo sitio primario. Pueden existir casos extremos en los que un nodo distinto al primario esté encargado de asignar los bloqueos, tal y como se describió con anterioridad.
 >[!tldr] Control Concurrencia en Esquemas de Copia Primaria Mediante Manejo de Token
 >Una alternativa al anterior esquema propuesto es realizar el control de concurrencia mediante el intercambio de *tokens* entre los distintos nodos de la red, este esquema separa la administración de los datos de su ubicación física. Cada dato tiene tokens de lectura ($r-token$) y un único token de escritura ($w-token$). El administrador del dato posee un token que circula bajo demanda.
