--- a/4º Año/Bases de Datos/Unidad 13/1. Almacenes de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 13/1. Almacenes de Datos.md
@@ -1,5 +1,5 @@
 La ***inteligencia de negocios*** es una arquitectura y un conjunto integrado de aplicaciones operacionales, de soporte de decisiones y bases de datos que proveen fácil acceso a los datos del negocio. Se refiere principalmente a técnicas computacionales utilizadas en la identificación, extracción y análisis de datos de negocios, tales como ingresos por ventas, por productos y/o departamentos, o por asociación de ingresos y costos, entre otros.
-Un ***proceso de decisión*** se puede entender como un proceso que implica elegir entre varias alternativas y cursos de acción, con el propósito de alcanzar una o varios objetivos definidos, es decir, no solo implica resolver problemas, sino también investigar oportunidades de negocio. Los proceso de decisiones se pueden dividir en tres categorías:
+Un ***proceso de decisión*** se puede entender como un proceso que implica elegir entre varias alternativas y cursos de acción, con el propósito de alcanzar una o varios objetivos definidos, es decir, no solo implica resolver problemas, sino también investigar oportunidades de negocio. Los procesos de decisiones se pueden dividir en tres categorías:
 - **Procesos de decisiones estructurados**: Todas las fases son estructuradas, es decir, se conocen los procedimientos para obtener la mejor solución.
 - **Procesos de decisiones semiestructurados**: Tiene alguna de las partes o fases estructuradas, en este tipo de procesos se combinan procedimientos estandarizados con el juicio humano.
 - **Proceso de decisiones no estructurados**: Ninguna de las faces de proceso es estructurada, es decir, las decisiones se toman de acuerdo a la intuición humana.
@@ -34,7 +34,7 @@ Existen dos paradigmas principales en cuanto a la relación entre **Data Warehou
 
 Ambos paradigmas tienen sus ventajas y desventajas, dependiendo de las necesidades y estructura de la organización. El enfoque **top-down** asegura mayor consistencia de los datos a nivel global, mientras que el **bottom-up** permite una implementación más rápida en áreas específicas antes de integrar los datos a nivel organizacional.
 ## Modelo Dimensional
-El ***modelo dimensional*** es un esquema de datos, que contiene la misma información que el modelo entidad-relación, pero que se utiliza para modelar almacenes de datos, con la principal diferencia que la información se almacena de manera simétrica, con el objetivo de mejorar la comprensión del usuario, optimizar la performance en consultas y brindar flexibilidad ante posibles cambios. Este tipo de esquemas poseen tres elementos fundamentales, los cuales son:
+El ***modelo dimensional*** es un esquema de datos, que contiene la misma información que el modelo entidad-relación, pero que se utiliza para modelar almacenes de datos, con la principal diferencia que la información se almacena de manera simétrica, con el objetivo de mejorar la comprensión del usuario, optimizar el rendimiento de las consultas y brindar flexibilidad ante posibles cambios. Este tipo de esquemas poseen tres elementos fundamentales, los cuales son:
 - **Atributos**: Describen características de algo tangible, como podría ser la fecha de nacimiento o la marca. Los atributos se organizan o agrupan en dimensiones.
 - **Hechos (Facts)**: Representa a la entidad u objeto que se desea observar, como podrían ser un producto o una venta. Los hechos pueden ser numéricos o textos, los hechos numéricos pueden ser categorizados en:
 	- **Hechos aditivos**: Se pueden sumar en todas las dimensiones.
