--- a/4º Año/Bases de Datos/Unidad 8/2. Organizacion por Asociacion.md
+++ b/4º Año/Bases de Datos/Unidad 8/2. Organizacion por Asociacion.md
@@ -48,7 +48,7 @@ Algunas técnicas de ***asociación dinámica*** permiten modificar la función 
 Una forma de asociación dinámica es la ***asociación extensible***, la cual hace frente a los cambios del tamaño de la base de datos dividiendo y fusionando los cajones a medida que esta aumenta o disminuye, gestionando de forma eficiente el espacio. Por otra parte, como la reorganización se realiza sobre un cajón a la vez, la degradación del rendimiento es aceptablemente baja.
 Con la asociación extensible se elige una función de asociación $h$ con las propiedades deseadas de uniformidad y aleatoriedad. Sin embargo, esta función de asociación genera valores dentro de un rango relativamente amplio, llamado, enteros binarios de $b$ bits. Inicialmente, no se utiliza el total de $b$ bits del valor de la función de asociación, para hacer redirigir el valor a su cajón correspondiente. En cualquier caso, empleamos $i$ bits, donde $0 < i < b$. Estos $i$ bits son utilizados como desplazamiento en la ***tabla de direcciones de cajones (TDC)*** la cual contiene un puntero a cada uno de los cajones con los índices. El valor de $i$ aumenta o disminuye de acuerdo a la cantidad de cajones que existan en ese momento, ya que para hacer frente al crecimiento de la base de datos se crean y eliminan cajones bajo demanda, de acuerdo a la cantidad de registros que existan.
 #### Consulta e Inserciones de Datos
-Para localizar el cajón que contiene el valor de la clave de búsqueda $K_l$, se toman los primeros $i$ bits más significativos de $h(K_l)$, se busca la entrada de la tabla que corresponda a esta cadena de bits, y se sigue el puntero del cajón en la entrada de la tabla. En caso de que se desee insertar un registro con un valor de la clave de búsqueda $K_l$ se sigue el mismo procedimiento de búsqueda que antes, llegando a algún cajón $j$. 
+Para localizar el cajón que contiene el valor de la clave de búsqueda $K_l$, se toman los primeros $i$ bits más significativos de $h(K_l)$, se busca la entrada de la tabla que corresponda a esta cadena de bits, y se sigue el puntero del cajón en la entrada de la tabla. En caso de que se desee insertar un registro con un valor de la clave de búsqueda $K_l$ se sigue el mismo procedimiento de búsqueda que antes, llegando a algún cajón $j$, con la diferencia de que puede que una inserción requiera de la división de un cajón.
 A la hora de insertar un nuevo registro en un cajón, si este tiene lugar disponible se inserta el registro, en caso contrario se debe dividir el cajón y redistribuir los registros actuales más el nuevo que se desea insertar. Para dividir el cajón, primero hay que determinar el valor de la función de asociación por si fuera necesario incrementar el número de bits que se están usando, esto nos pone antes dos situaciones:
 1. Si $i=i_j$​, significa que solo hay una entrada en la TDC que apunta al cajón $j$. En este caso, se necesita incrementar el tamaño de la entrada en la TDC para incluir los punteros a los dos cajones resultantes de la división del cajón $j$, para lograr esto se sigue los siguientes pasos:
 	1. Se incrementa el valor de $i$ en uno, lo que duplica el número de entradas en la TDC. Cada entrada se sustituye por dos entradas, y cada una de estas nuevas entradas contiene el mismo puntero que la entrada original. De esta manera, ahora hay dos entradas en la TDC que apuntan al cajón $j$.
