--- a/4º Año/Bases de Datos/Unidad 11/1. Bases de Datos no Relacionales.md
+++ b/4º Año/Bases de Datos/Unidad 11/1. Bases de Datos no Relacionales.md
@@ -8,7 +8,7 @@ Las bases de datos relacionales satisfacen las necesidades comerciales actuales.
 Existen aplicaciones que crean nuevos tipos de dato, los cuales cambian rápidamente, además de introducir volúmenes masivos de estos datos a las bases de datos, estos factores hicieron que se comenzara a considerar de forma más seria la creación de bases de datos que den soporte a este tipo de datos no tabulares.
 Sumado a que en la actualidad las aplicaciones se entregan como servicios que deben estar siempre activos, accesibles desde muchos dispositivos diferentes y escalados globalmente con datos distribuidos cerca de sus usuarios para mejorar la latencia y cumplir con la regulación de soberanía de datos. Esto va de la mano con el hecho de que las organizaciones están recurriendo a arquitecturas de escalabilidad horizontal que utilizan software abierto, los cuales se ejecutan en servidores básicos y plataformas de computación en la nube, en lugar de una gran infraestructura monolítica de servidor y almacenamiento.
 Todos estos factores obligan a los desarrolladores, ya sea de grupos pequeños o numerosos, a trabajar de forma ágil, iterando de forma rápida y efectuando cambios en el código de forma periódica.
-Los sistemas NoSQL no tabulares ofrecen modelos de datos más flexibles, una mayor escalabilidad y rendimiento. Además, gran parte de estas bases de datos mantienen algunas características claves del modelo relacional, como lo puede ser el lenguaje de consulta expresivo, los índices secundarios o las propiedades ACID, aunque esto última característica solo es respetada por algunas bases de datos no relacionales.
+Los sistemas NoSQL ofrecen modelos de datos más flexibles, una mayor escalabilidad y rendimiento. Además, gran parte de estas bases de datos mantienen algunas características claves del modelo relacional, como lo puede ser el lenguaje de consulta expresivo, los índices secundarios o las propiedades ACID, aunque esto última característica solo es respetada por algunas bases de datos no relacionales.
 La primera característica que diferencia a las bases de datos no tabulares de las relacionales son sus modelos de datos. Si bien existen muchas bases de datos no tabulares estas pueden ser clasificadas en las siguientes cuatro categorías:
 - **Modelo de documentos**: Este tipo de bases de datos, almacena todos los datos en documentos. En este modelo cada documento es en efecto un objeto el cual contiene uno o más campos, cada campo almacena un tipo de valor particular. Los datos en estos documentos suelen ser guardados en una estructura muy similar a un `JSON`. En este tipo de bases de datos, los datos no se guardan en tablas independientes, sino que se almacenan una relación y sus asociaciones en un mismo documento. Estas características simplifican el acceso a los datos y, en muchos casos, elimina la necesidad de operaciones `JOIN` y transacciones complejas de múltiples registros.
 >[!tldr] Características del Modelo Basado en Documentos
