--- a/4º Año/Bases de Datos/Unidad 13/2. Mineria de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 13/2. Mineria de Datos.md
@@ -17,7 +17,7 @@ Los datos que conforman los distintos atributos de un registro pueden ser de dis
 Las metodologías de minería de datos son marcos estructurados y sistemáticos que guían el proceso de extraer conocimiento útil a partir de grandes volúmenes de datos. Las más conocidas son ***CRISP-DM (Cross Industry Standard Process for Data Mining)*** y ***KDD (Knowledge Discovery in Databases)***.
 El principal objetivo de este tipo de metodologías es transformar los datos en bruto de forma tal que los mismos resulten útiles para la toma de decisiones.
 ### Proceso Estándar Interindustrial para el Minado de Datos (CRISP-DM)
-Es una metodología utilizada para estructurar, guiar y organizar proyectos de minería y análisis de datos. Esta metodología es útil para ilustrar cómo una empresa puede pasar de tener un objetivo de negocio genera, a implementar una solución de análisis de datos para tomar decisiones proactivas. Esta metodología cuenta con las siguientes fases:
+Es una metodología utilizada para estructurar, guiar y organizar proyectos de minería y análisis de datos. Esta metodología es útil para ilustrar cómo una empresa puede pasar de tener un objetivo de negocio general, a implementar una solución de análisis de datos para tomar decisiones proactivas. Esta metodología cuenta con las siguientes fases:
 1. **Comprensión del negocio**: En esta fase se definen los objetivos del proyecto, se evalúa la situación actual y se establecen las metas de minería de datos.
 2. **Comprensión de los datos**: Esta fase incluye la recolección inicial, descripción, exploración y verificación de la calidad de los datos. Todas estas acciones se llevan a cabo con el fin de verificar la presencia de valores nulos o atípicos, comprender como están distribuidos los datos, etc.
 3. **Preparación de los datos**: En esta fase se realizan tareas como la limpieza de los datos, la selección de variables relevantes, la transformación, además del formateo e integración de diferentes fuentes de datos.
@@ -43,7 +43,7 @@ El siguiente paso consiste en seleccionar y aplicar la técnica de minería de d
 - Modelos Estadísticos.
 - Análisis de Clusters.
 
-El resultado de esta etapa es un ***modelo de conocimiento*** que representa patrones de comportamiento observados o relaciones de asociación entre las variables del problema. Es posible emplear varias técnicas al mismo tiempo para generar distintos modelos, aunque cada técnica puede requerir una transformación deferente de los datos.
+El resultado de esta etapa es un ***modelo de conocimiento*** que representa patrones de comportamiento observados o relaciones de asociación entre las variables. Es posible emplear varias técnicas al mismo tiempo para generar distintos modelos, aunque cada técnica puede requerir una transformación deferente de los datos.
 Finalmente, se realiza la interpretación y evaluación de los datos, donde los patrones descubiertos son analizados y validados para determinar si representan conocimiento útil y significativo para el objetivo del proyecto. En esta etapa, los resultados se presentan de manera comprensible para los usuarios finales, utilizando visualizaciones y reportes apropiados. Si se han generado varios modelos mediante diferentes técnicas, se deben comparar para seleccionar el que mejor se ajuste al problema. En caso de que ningún modelo cumpla con las expectativas, se deben modificar los pasos anteriores para generar nuevos modelos.
 ## Minería de Datos Supervisada y No Supervisada
 Las técnicas de minería de datos se puede dividir en dos grandes enfoques, el supervisado y el no supervisado. El enfoque supervisado se basa en hacer predicciones a futuro utilizando datos históricos etiquetados, donde las variables objetivo ya están definidas. Un ejemplo sería predecir el riesgo de un cliente para otorgar un préstamo. Por otro lado, el enfoque no supervisado utiliza datos no etiquetados, buscando patrones o estructuras dentro de los datos para organizar y agrupar la información.
@@ -80,5 +80,5 @@ Entre las técnicas de segmentación más comunes están:
 - **K-medoid**: Similar a K-means, pero agrupa objetos en función de su similitud con el objeto más representativo.
 
 La ***regresión*** es una técnica que predice el valor de una variable basándose en los valores de otras variables independientes. Por ejemplo, se puede predecir los importes de ventas de nuevos productos en función de los gastos de publicidad, estimar la velocidad del viento considerando la temperatura, humedad y presión atmosférica, o utilizar series de tiempo para pronosticar índices bursátiles.
-Por otro lado, la ***detección de desviaciones y anomalías*** tiene como objetivo identificar comportamientos que se desvían significativamente de lo normal. Entre sus aplicaciones comunes están la detección de fraudes con tarjetas de crédito y la identificación de intrusos en redes informáticas. Existen varios esquemas de detección dentro de los cuales se encuentran los basados en gráficos o estafísticas, los basados en distancia y los basados en modelos.
+Por otro lado, la ***detección de desviaciones y anomalías*** tiene como objetivo identificar comportamientos que se desvían significativamente de lo normal. Entre sus aplicaciones comunes están la detección de fraudes con tarjetas de crédito y la identificación de intrusos en redes informáticas. Existen varios esquemas de detección dentro de los cuales se encuentran los basados en gráficos o estadísticas, los basados en distancia y los basados en modelos.
 
