Indice para DB y nueva info al README

--- a/4º Año/Bases de Datos/Unidad 10/2. Esquemas de Control de Concurrencia.md
+++ b/4º Año/Bases de Datos/Unidad 10/2. Esquemas de Control de Concurrencia.md
@@ -13,7 +13,7 @@ Cuando una transacción desbloquea datos inmediatamente después de su último a
 >
 >1. No exista otra transacción que posea un bloqueo sobre $Q$ en un modo que esté en conflicto con el modo $M$.
 >2. No existe otra transacción que esté esperando un bloqueo sobre $Q$ y que lo haya solicitado antes que $T_i$.
-#### Protocolos de Bloqueo de dos Fases
+### Protocolos de Bloqueo de dos Fases
 Este protocolo requiere que todas las transacciones hagan sus solicitudes de bloqueo y desbloqueo en dos fases:
 1. **Fase de crecimiento**: Una transacción puede obtener bloqueos, pero no puede liberar ninguno.
 2. **Fase de encogimiento**: Una transacción puede liberar bloqueos, pero no puede solicitar ninguno nuevo.
