--- a/4º Año/Bases de Datos/Unidad 12/2. Proceso de Recuperación, Concurrencia e Interbloqueo.md
+++ b/4º Año/Bases de Datos/Unidad 12/2. Proceso de Recuperación, Concurrencia e Interbloqueo.md
@@ -1,9 +1,7 @@
-Al especificar un valor de punto de compromiso para cada nodo, se asegura de que el servidor más crítico no se bloquee si se produce un fallo durante la fase de preparación o confirmación. Para establecer la ***commit point strength*** de una base de datos basta con agregar una línea adicional en el archivo de configuración durante la inicialización de esta misma. Este valor solo se utilizará para determinar el punto de commit en una transacción distribuida.
->[!note] Punto de Compromiso y Fuerza del Punto de Compromiso
->En una transacción distribuida, el *punto de compromiso* es el momento en el que se decide que una transacción puede ser finalizada y sus cambios aplicados de manera permanente. Este punto es crucial porque asegura que todos los nodos involucrados en la transacción estén de acuerdo en que la transacción puede ser completada sin errores.
->Por otro lado, cuando hablamos de *fuerza del punto de compromiso* (*commit point strenght*) se refiere a la importancia del nodo que se elige para almacenar el punto de compromiso. Un nodo con una alta *commit point strength* es uno que es menos probable que falle y que está siempre disponible. Esto es importante porque si el nodo que almacena el punto de compromiso falla podría producir un bloqueo en el sistema.
-
-Dado que el punto de compromiso almacena información sobre el estado de la transacción, este debe ser almacenado en un nodo que no se caiga a menudo y que siempre esté disponible en caso de que otros nodos necesiten información sobre el estado de la transacción. Por lo que se recomienda que la *commit point strength* se establezca en función de la cantidad de datos críticos que se comparten en la base de datos. Esto significa que si una base de datos maneja datos muy importantes, el nodo que almacena el punto de compromiso debe ser especialmente robusto y confiable.
+## Punto de Compromiso y Fuerza del Punto de Compromiso
+En una transacción distribuida, el ***punto de compromiso*** es el momento en el que se decide que una transacción puede finalizar y sus cambios aplicarse de manera permanente. Este punto es crucial, ya que garantiza que todos los nodos involucrados en la transacción acuerden su finalización sin errores. Por otro lado, la ***fuerza del punto de compromiso*** (*commit point strength*) hace referencia a la importancia del nodo seleccionado para almacenar el punto de compromiso. Un nodo con una alta _commit point strength_ es aquel menos propenso a fallar y que permanece siempre disponible. Esto es esencial porque, si el nodo que almacena esta información llega a fallar, el sistema podría bloquearse.
+Para evitar este tipo de problemas, se recomienda configurar la _commit point strength_ en función de la criticidad de los datos manejados en la base de datos. Si la base de datos contiene información altamente sensible o esencial, el nodo encargado del punto de compromiso debe ser especialmente robusto y confiable.
+La configuración de este valor se realiza agregando una línea adicional en el archivo de configuración al inicializar la base de datos. De este modo, se asegura que el servidor más crítico no se bloquee en caso de un fallo durante la fase de preparación o confirmación de la transacción.
 ## Resolución de Transacciones Dudosas en Oracle
 El compromiso en tres fases asegura que todos los nodos se comprometan o retrocedan en forma conjunta. En caso de que suceda alguno de los siguientes problemas la transacción se convierte en ***dudosa*** (In-Doubt):
 1. Un servidor que ejecuta el software de la base de datos se bloquea.
