--- a/4º Año/Bases de Datos/Unidad 13/1. Almacenes de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 13/1. Almacenes de Datos.md
@@ -1,3 +1,4 @@
+## Inteligencia de Negocios y Sistemas de Soporte de Decisiones
 La ***inteligencia de negocios*** es una arquitectura y un conjunto integrado de aplicaciones operacionales, de soporte de decisiones y bases de datos que proveen fácil acceso a los datos del negocio. Se refiere principalmente a técnicas computacionales utilizadas en la identificación, extracción y análisis de datos de negocios, tales como ingresos por ventas, por productos y/o departamentos, o por asociación de ingresos y costos, entre otros.
 Un ***proceso de decisión*** se puede entender como un proceso que implica elegir entre varias alternativas y cursos de acción, con el propósito de alcanzar una o varios objetivos definidos, es decir, no solo implica resolver problemas, sino también investigar oportunidades de negocio. Los procesos de decisiones se pueden dividir en tres categorías:
 - **Procesos de decisiones estructurados**: Todas las fases son estructuradas, es decir, se conocen los procedimientos para obtener la mejor solución.
@@ -22,7 +23,7 @@ Para comenzar a poblar con información un almacén de datos se debe realizar un
 ![[esquema-etl.png]]
 
 Los periodos de carga pueden variar de acuerdo a las necesidades, pero en la mayoría de los casos los periodos son superior al día, pueden existir ocasiones en la que se requiera periodos de tiempo más cortos en dicho caso solo cambia la configuración.
-### Mercados de datos (Data Mart)
+## Mercados de datos (Data Mart)
 Un **Data Mart (DM)** es una versión limitada de un almacén de datos, diseñada para atender las necesidades específicas de un área funcional, un problema particular, un departamento, o un grupo de usuarios dentro de una organización. Los mercados de datos permiten un acceso más rápido y eficiente a los datos relevantes para un propósito específico, lo que facilita el análisis y la toma de decisiones a nivel departamental.
 Existen dos paradigmas principales en cuanto a la relación entre **Data Warehouses** y **Data Marts**:
 - **Paradigma Top-down (Bill Inmon)**: Este enfoque plantea que se debe construir primero un almacén de datos centralizado y, posteriormente, crear los distintos mercados de datos derivados para cada área específica. El almacén de datos es el núcleo que garantiza la consistencia de los datos, mientras que los mercados de datos actúan como subgrupos especializados.
