--- a/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
+++ b/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
@@ -1,3 +1,4 @@
+## Lenguaje de Consulta Estructurado
 La estructura básica de una expresión SQL consiste en tres cláusulas: `SELECT`, `FROM` y `WHERE`, de la forma:
 ```sql
 SELECT A1, A2,..., An
