--- a/4º Año/Bases de Datos/Unidad 4/3. Lenguaje de Definicion de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 4/3. Lenguaje de Definicion de Datos.md
@@ -23,7 +23,7 @@ SQL en su estándar define una serie de dominios nativos que pueden ser utilizad
 >```
 >- Los valores de intervalo se pueden sumar a los tipos `DATE`, `TIME` y `TIMESTAMP`.
 >- Se puede realizar un `CAST` del tipo string a `DATE`, `TIME` y `TIMESTAMP` siempre y cuando se respete el formato especificado para los tipos fecha.
-### Definición de Esquemas
+### Definición de Relaciones
 En SQL un esquema relacional se define utilizando la cláusula `CREATE TABLE`, seguido por el nombre de la tabla, para cada tabla especificamos los atributos y el dominio de cada uno de estos atributos, veamos en un ejemplo:
 ```sql
 CREATE TABLE cliente(
