--- a/4º Año/Bases de Datos/Unidad 5/1. Diseño Relacional.md
+++ b/4º Año/Bases de Datos/Unidad 5/1. Diseño Relacional.md
@@ -45,7 +45,7 @@ Puede que una instancia específica de un esquema, pueda satisfacer una dependen
 >- $nombre\_cliente \rightarrow nombre\_cliente$: Es trivial, ya que el mismo nombre siempre se puede determinar a si mismo.
 >
 >De manera más general, decimos que $X \rightarrow Y$ es trivial si $Y \subseteq X$.
-### Clausura o Cierre de un Conjunto de Dependencias Funcionales.
+### Clausura o Cierre de un Conjunto de Dependencias Funcionales
 La ***clausura de un conjunto de dependencias funcionales***, denotada por $F^+$, es el conjunto de todas las dependencias funcionales que se pueden inferir lógicamente a partir de un conjunto dado $F$ de dependencias funcionales. Esto incluye todas las dependencias funcionales originales en $F$ más todas aquellas que se pueden derivar utilizando los axiomas de Armstrong.
 Los ***axiomas de Armstrong*** son reglas básicas utilizadas para derivar todas las posibles dependencias funcionales que se pueden inferir de un conjunto dado de dependencias funcionales. Estos axiomas son:
 1. **Reflexividad (Trivialidad)**: Sí $Y \subseteq X \Rightarrow X \rightarrow Y$. Esto es bastante directo, si se tiene un conjunto de atributos $X$, entonces esos atributos pueden determinar cualquier subconjunto $Y$ de sí mismos.
