--- a/4º Año/Bases de Datos/Unidad 7/2. Bases de Datos Objeto Relacional.md
+++ b/4º Año/Bases de Datos/Unidad 7/2. Bases de Datos Objeto Relacional.md
@@ -26,7 +26,7 @@ Los tipos definidos por los usuarios pueden ser clasificados de la siguiente man
 1. **Tipo distinto**: Son tipos de datos basados en tipos básicos, como `INTEGER` o `FLOAT` heredando tanto su dominio como sus operaciones, con la particularidad de que solo permiten realizar operaciones con objetos de su mismo tipo, aunque pueden castearse a sus tipos bases y realizar operaciones sin problema alguno.
 2. **Tipo estructurado como valor**: Son tipos de datos compuestos que son utilizados como propiedad por otros tipos estructurados. Estos tipos de datos permiten la definición de funciones y procedimientos que pueden ser utilizados para realizar comparaciones entre instancias de este tipo.
 3. **Tipo estructurado como objeto**: Son tipos de datos estructurados que se utilizan para representar entidades del mundo real y por lo general se emplean para generar una tabla a partir de ellos, donde cada objeto se representa como una fila de la tabla, asignando un identificador único a cada objeto.
-### Definición de Métodos
+## Definición de Métodos
 Cuando se está especificando un nuevo tipo de dato, también es posible declarar funciones que implementen comportamientos propios para los objetos de ese tipo. Estas funciones pueden ser sobrecargadas la cantidad de veces que se necesite, con la particularidad de que el primer parámetro de estas funciones va a ser el ***self***, que hará referencia al propio objeto.
 Al igual que en los lenguajes orientados a objetos convencionales, las funciones pueden ser ***constructores***, utilizados para instanciar nuevos objetos. ***Estáticas***, es decir, forman parte de la definición del tipo de dato y no de sus instancias. Y las funciones ***miembro*** que pueden ser llamadas por todas las instancias de ese tipo.
 ## Tipos Estructurados Brindados por las Bases de Datos
