--- a/4º Año/Bases de Datos/Unidad 9/1. Transacciones.md
+++ b/4º Año/Bases de Datos/Unidad 9/1. Transacciones.md
@@ -5,7 +5,7 @@ Una transacción es una unidad de programa que accede y posiblemente actualiza v
 - **Durabilidad**: Una vez una transacción ha sido completada, los resultados, es decir, los cambios de la transacción se hacen permanentes.
 
 Las transacciones en los sistemas de gestión de bases de datos se pueden implementar de dos formas distintas, mediante el uso de bitácoras o a través de un mecanismo de doble paginación.
-## Estados y Fallos de las Transacciones
+### Estados y Fallos de las Transacciones
 En ausencia de fallos, todas las transacciones se completan con éxito. Sin embargo, una transacción puede que no siempre termine su ejecución con éxito, este tipo de transacciones se dice que fueron ***abortadas***. En caso de que una transacción, se debe preservar la propiedad de atomicidad y consistencia de la base de datos por lo que se debe deshacer cualquier cambio que haya realizado dicha transacción sobre la base de datos. En caso de que la transacción se haya ***comprometido*** los datos se plasman en la base de datos.
 Con el fin de gestionar de mejor manera la concurrencia de las transacciones, una transacción puede estar en solo uno de los siguientes estados:
 - **Activa**: Estado inicial de la toda transacción. Las transacciones permanecen en este estado durante su ejecución.
