--- a/4º Año/Bases de Datos/Unidad 2/1. Modelo Entidad-Relacion.md
+++ b/4º Año/Bases de Datos/Unidad 2/1. Modelo Entidad-Relacion.md
@@ -1,5 +1,7 @@
+## Importancia del Modelado en las Bases de Datos
 El desarrollo de un modelo teórico para el modelado de bases de datos es necesario, puesto que proporciona una representación abstracta que permite visualizar y analizar la estructura antes de su implementación. Esto facilita la detección temprana de errores, reduce costos de desarrollo y asegura que la base de datos cumpla con los requerimientos del negocio. Además, sirve como documentación para el equipo de desarrollo y mantenimiento, facilitando al mismo tiempo la comunicación entre los desarrolladores y los usuarios finales del sistema.
 El ***Modelo Entidad-Relación (E-R)*** se basa en la representación del mundo real a través de un conjunto de objetos básicos llamados entidades y de relaciones entre esas entidades. Una ***entidad*** no es más que una cosa u objeto del mundo real que es distinguido entre los demás objetos. Por ejemplo, una persona, una empresa, entre otros. Por otro lado, se denomina ***conjunto de entidades*** a las agrupaciones de entidades de un mismo tipo. Por ejemplo, el conjunto de todas las personas, o de todas las empresas.
+### Componentes del Modelo Entidad-Relación
 Las entidades se representan mediante un conjunto de *atributos*, estos atributos describen propiedades que posee cada miembro de un conjunto de entidades y pueden ser de distintos tipos:
 - Simples y Compuestos.
 - Monovalorados y Multivalorados.
@@ -13,7 +15,7 @@ El ***grado*** de un *conjunto de relaciones* hace referencia a la cantidad de *
 ![[grado-relacion.png]]
 
 Las ***restricciones***, por otro lado, expresan la cantidad de entidades a las que otra entidad puede estar asociada vía un *conjunto de relaciones*. Para un conjunto de relaciones binaria las restricciones de cardinalidad pueden ser, uno a uno, uno a varios o de varios a varios. La forma en la que se expresa esa cardinalidad varia, ya que existen diferentes notaciones para poder documentar todo esto.
-## Las claves
+## Las Claves
 En bases de datos, las claves son atributos de las entidades que se utilizan para referirse a una entidad particular dentro de un *conjunto de entidades*, existen varios tipos de claves:
 - **Superclave**: Es el conjunto de una o más atributos cuyos valores determinan inequívocamente cada entidad, es decir, el valor de ese atributo o atributos son únicos para cada una de las entidad del conjunto.
 - **Clave candidata**: Son los atributos de una entidad que son una superclave minimal, es decir, tiene la mínima cantidad de atributos necesaria para que pueda identificar inequívocamente a cada entidad, por ejemplo, el número de matrícula de un estudiante es una clave candidata, ya que mediante ese atributo se puede identificar a cada uno de los estudiantes.
